# Dugout

./: .gitignore  Anchor.toml  README.md  next.config.js  package-lock.json  package.json
hooks/: useOnboarding.ts
programs/dugout/: Cargo.toml
programs/dugout/src/: constants.rs  error.rs  helper.rs  lib.rs
programs/dugout/src/events/: event.rs
programs/dugout/src/instructions/: claim.rs  close.rs  create_group.rs  initialize.rs  join_group.rs  mod.rs
programs/dugout/src/state/: dugout.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(default)/: layout.tsx  page.tsx
src/app/(default)/demo/: page.tsx
src/app/api/competitions/[code]/: route.ts
src/app/api/competitions/matches/: route.ts
src/app/auth/: page.tsx
src/app/dashboard/: layout.tsx  loading.tsx  page.tsx
src/components/: Provider.tsx  active.tsx  button.tsx  footer.tsx  live.tsx  loading.tsx  nav.tsx  notification.tsx  working.tsx  workings.tsx
src/components/contexts/: ClientWalletProvider.tsx
src/components/modals/: CreateGroupModal.tsx  Onboarding.tsx  SettingsModal.tsx
src/components/team/: TeamFormation.tsx
src/components/ui/: DashboardNav.tsx  Infobutton.tsx  Onboarding.tsx  playerSelect.tsx
src/hooks/: useModal.ts
src/hooks/test/: useGroup.ts
store/api/: api.ts
store/slices/: isAuthSlice.ts
tests/: dugout.ts
types/: club.ts  football.ts  program.ts
utils/: api.ts  constants.ts  dateUtils.ts  matches.ts  plData.ts  teams.ts
utils/config/: baseUrl.ts  program.ts
utils/idl/: idl.json
utils/test/: generate.ts
(+1 files in other folders)
