[package]
name = "dugout"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dugout"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

custom-heap = []
custom-panic = []
anchor-debug = []
init-if-needed = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
